--- a/sample.css
+++ b/sample.css
@@ -17,7 +17,7 @@ body {
   float: left;
   margin: 0px auto;
   padding: 20px;
-  transition: 1s ease-in-out;
+  transition: 5s ease-in-out 2s;
 }
 ul {
   list-style-type: none;
@@ -29,7 +29,7 @@ ul {
   display: none;
   float: left;
   padding: 1px;
-  transition: 1s;
+  transition: 5s ease-in 2s;
 }
 a {
   background: #001766;
